# AstroGenesis2.0

./: .gitattributes  .gitignore  .gitmodules  GETTING_STARTED.md  README.md
Documentation/Jufo_Doku/: Deckblatt.aux  Deckblatt.fdb_latexmk  Deckblatt.tex  Doku.aux  Doku.bbl  Doku.bcf  Doku.blg  Doku.fdb_latexmk  Doku.fls  Doku.run.xml  Doku.tex  inhaltsverzeichnis.aux  inhaltsverzeichnis.tex
Documentation/code_documentation/: DataFormat.txt
Render Programm/: CMakeLists.txt  _clear.cmd
Render Programm/External Libraries/GLM/glm/gtx/: transform.hpp
Render Programm/Video_Output/: convert_bmp_to_video.bat  lol.txt
Render Programm/src/: DataManager.cpp  DataManager.h  Engine.cpp  Engine.h  FileManager.cpp  FileManager.h  Particle.h  main.cpp  vec3.cpp
Simulation/: CMakeLists.txt  Config.ini  _clear.cmd  _startVSCode.cmd
Simulation/data/: DataManager.h
Simulation/src/: main.cpp
Simulation/src/File/: Console.cpp  Console.h  DataManager.cpp  DataManager.h  ICDataReader.cpp
Simulation/src/Math/: Constants.h  kernel.cpp  kernel.h  random.cpp  random.h  vec3.cpp  vec3.h
Simulation/src/Physics/: Galaxy.cpp  Galaxy.h  Node.cpp  Node.h  Particle.h  Simulation.cpp  Simulation.h  TimeIntegration.cpp  TimeIntegration.h
Simulation/src/Physics/IC/: Bulge.h  Disk.cpp  Disk.h  Exponential_Profile.h  Galaxy.cpp  Galaxy.h  Halo.cpp  Hernquist_Profile.h
Simulation/src/Physics/Tree/: Node.cpp  Tree.cpp  Tree.h
docs/: DataFormats.txt  General.txt
docs/Jufo_Doku/: Deckblatt.fls  kapitel1_einleitung.aux  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  references.bib
input_data/Example_Galaxy_1_ASCII_2500p_from_KlausDolag/: Galaxy1.txt
input_data/GALIC_Model-M1-Gadget2Format/: fit_1.txt  fit_3.txt  sigma_r_2.txt  sigma_r_3.txt  snap_000  snap_001  snap_002  snap_007
input_data/Model-M1-G2/: fit_2.txt  parameters-usedvalues  sigma_r_1.txt  snap_003  snap_004  snap_005  snap_006  snap_008  snap_009  snap_010
output_data/merging_galaxies_gadget2_example_60k/: info.txt
output_data/test/: info.txt
simulation/: CMakeLists.txt  Config.ini  terminal.bat  wsl.bat  wsl_kimi.bat
simulation/src/: main.cpp
simulation/src/File/: Console.cpp  DataManager.cpp  DataManager.h  ICDataReader.cpp  ICDataReader.h  Log.cpp  Log.h
simulation/src/Math/: Constants.h  Units.h  kernel.cpp  mat4.cpp  mat4.h  random.cpp  random.h  vec4.cpp  vec4.h
simulation/src/Physics/: Cooling.cpp  Cooling.h  Particle.h  SFR.cpp  SFR.h  Simulation.cpp  Simulation.h  TimeIntegration.cpp  TimeIntegration.h
simulation/src/Physics/IC/: Bulge.cpp  Disk.cpp  Disk.h  Galaxy.cpp  Halo.cpp  Halo.h  NFW_Profile.h
simulation/src/Physics/Tree/: Node.cpp  Node.h  Tree.cpp  Tree.h
